--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -32,4 +32,4 @@ jobs:
         run: gcloud info
 
       - name: Build Docker Image
-        run: gcloud builds submit --tag us-central1-docker.pkg.dev/steam-ego-468307-u7/notely-ar-repo/tommy664/notely:latest .
+        run: gcloud builds submit --service-account=cloud-run-deployer@steam-ego-468307-u7.iam.gserviceaccount.com --tag us-central1-docker.pkg.dev/steam-ego-468307-u7/notely-ar-repo/tommy664/notely:latest .
