--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -33,3 +33,6 @@ jobs:
 
       - name: Build Docker Image
         run: gcloud builds submit --config=cloudbuild.yaml .
+
+      - name: Deploy to Cloud Run
+        run: gcloud run deploy notely --image us-central1-docker.pkg.dev/steam-ego-468307-u7/notely-ar-repo/notely:latest --region us-central1 --allow-unauthenticated --project steam-ego-468307-u7 --max-instances=4
