--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,9 +8,15 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
 
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+
     steps:
       - name: Check out code
         uses: actions/checkout@v4
+
+      - name: Install Goose
+        run: go install github.com/pressly/goose/v3/cmd/goose@latest
 
       - name: Set up Go
         uses: actions/setup-go@v5
@@ -19,6 +25,9 @@ jobs:
 
       - name: Build App
         run: ./scripts/buildprod.sh
+
+      - name: Run Migrations
+        run: ./scripts/migrateup.sh
 
       - id: auth
         uses: google-github-actions/auth@v2
